Update Score - xiaoxi654

--- a/xiaoxi654/rivalscores.ini
+++ b/xiaoxi654/rivalscores.ini
@@ -219,8 +219,8 @@ pv.725.diff.3.score=472420
 pv.725.diff.3.slidescore=34960
 pv.725.diff.3.check=1895145924
 pv.266.diff.3.alltimemodifiers=0
-pv.266.diff.3.alltimepercent=7342
-pv.266.diff.3.check=0
+pv.266.diff.3.alltimepercent=7633
+pv.266.diff.3.check=-1071824940
 pv.243.diff.3.alltimemodifiers=0
 pv.243.diff.3.alltimepercent=10527
 pv.243.diff.3.alltimerank=5
@@ -422,3 +422,30 @@ pv.082.diff.3.rank=2
 pv.082.diff.3.score=583170
 pv.082.diff.3.slidescore=0
 pv.082.diff.3.check=-1064186148
+pv.266.diff.3.alltimerank=2
+pv.266.diff.3.challengescore=0
+pv.266.diff.3.combo=95
+pv.266.diff.3.holdscore=156410
+pv.266.diff.3.modifier=0
+pv.266.diff.3.name=¥´©`¥¹¥È¥ë©`¥ë
+pv.266.diff.3.notecounts=544,95,10,5,61
+pv.266.diff.3.notepercents=7608,1329,140,70,853
+pv.266.diff.3.percent=7633
+pv.266.diff.3.rank=2
+pv.266.diff.3.score=630760
+pv.266.diff.3.slidescore=184570
+pv.734.diff.3.alltimemodifiers=0
+pv.734.diff.3.alltimepercent=9144
+pv.734.diff.3.alltimerank=3
+pv.734.diff.3.challengescore=0
+pv.734.diff.3.combo=193
+pv.734.diff.3.holdscore=145730
+pv.734.diff.3.modifier=0
+pv.734.diff.3.name=‰²¥»‰²¥»
+pv.734.diff.3.notecounts=494,74,5,1,13
+pv.734.diff.3.notepercents=8416,1261,85,17,221
+pv.734.diff.3.percent=9144
+pv.734.diff.3.rank=3
+pv.734.diff.3.score=553370
+pv.734.diff.3.slidescore=79220
+pv.734.diff.3.check=1728271164
