--- a/wm86/rivalscores.ini
+++ b/wm86/rivalscores.ini
@@ -443,17 +443,17 @@ pv.441.diff.3.ex.slidescore=627250
 pv.441.diff.3.ex.check=-1661878400
 pv.020.diff.3.ex.alltimerank=4
 pv.020.diff.3.ex.challengescore=0
-pv.020.diff.3.ex.combo=148
-pv.020.diff.3.ex.holdscore=145790
+pv.020.diff.3.ex.combo=338
+pv.020.diff.3.ex.holdscore=139160
 pv.020.diff.3.ex.modifier=0
 pv.020.diff.3.ex.name=moon
-pv.020.diff.3.ex.notecounts=366,73,1,0,5
-pv.020.diff.3.ex.notepercents=8225,1640,22,0,112
-pv.020.diff.3.ex.percent=9610
+pv.020.diff.3.ex.notecounts=370,70,4,0,1
+pv.020.diff.3.ex.notepercents=8315,1573,90,0,22
+pv.020.diff.3.ex.percent=9816
 pv.020.diff.3.ex.rank=4
-pv.020.diff.3.ex.score=979790
-pv.020.diff.3.ex.slidescore=628920
-pv.020.diff.3.ex.check=1819266652
+pv.020.diff.3.ex.score=995400
+pv.020.diff.3.ex.slidescore=632260
+pv.020.diff.3.ex.check=-1666660992
 pv.259.diff.3.alltimerank=4
 pv.259.diff.3.challengescore=0
 pv.259.diff.3.combo=437
@@ -558,19 +558,19 @@ pv.262.diff.3.rank=2
 pv.262.diff.3.score=748200
 pv.262.diff.3.slidescore=164440
 pv.262.diff.3.check=957404664
-pv.253.diff.3.alltimerank=4
+pv.253.diff.3.alltimerank=5
 pv.253.diff.3.challengescore=0
-pv.253.diff.3.combo=454
-pv.253.diff.3.holdscore=165680
+pv.253.diff.3.combo=553
+pv.253.diff.3.holdscore=168910
 pv.253.diff.3.modifier=0
 pv.253.diff.3.name=LOL -lots of laugh-
-pv.253.diff.3.notecounts=500,52,0,1,0
-pv.253.diff.3.notepercents=9042,940,0,18,0
-pv.253.diff.3.percent=10118
-pv.253.diff.3.rank=4
-pv.253.diff.3.score=670720
+pv.253.diff.3.notecounts=513,40,0,0,0
+pv.253.diff.3.notepercents=9277,723,0,0,0
+pv.253.diff.3.percent=10347
+pv.253.diff.3.rank=5
+pv.253.diff.3.score=683110
 pv.253.diff.3.slidescore=161100
-pv.253.diff.3.check=-1714892706
+pv.253.diff.3.check=-736886665
 pv.739.diff.3.alltimerank=5
 pv.739.diff.3.challengescore=0
 pv.739.diff.3.combo=543
@@ -597,7 +597,7 @@ pv.239.diff.3.rank=3
 pv.239.diff.3.score=510860
 pv.239.diff.3.slidescore=80780
 pv.239.diff.3.check=-1717411257
-pv.832.diff.3.alltimerank=4
+pv.832.diff.3.alltimerank=5
 pv.832.diff.3.challengescore=0
 pv.832.diff.3.combo=448
 pv.832.diff.3.holdscore=147470
@@ -609,7 +609,7 @@ pv.832.diff.3.percent=10384
 pv.832.diff.3.rank=4
 pv.832.diff.3.score=647490
 pv.832.diff.3.slidescore=221240
-pv.832.diff.3.check=1533248084
+pv.832.diff.3.check=1533248088
 pv.260.diff.3.alltimerank=4
 pv.260.diff.3.challengescore=0
 pv.260.diff.3.combo=271
@@ -649,19 +649,19 @@ pv.242.diff.3.rank=5
 pv.242.diff.3.score=636120
 pv.242.diff.3.slidescore=44800
 pv.242.diff.3.check=716935581
-pv.612.diff.3.alltimerank=4
+pv.612.diff.3.alltimerank=5
 pv.612.diff.3.challengescore=0
-pv.612.diff.3.combo=206
-pv.612.diff.3.holdscore=143380
+pv.612.diff.3.combo=417
+pv.612.diff.3.holdscore=143690
 pv.612.diff.3.modifier=0
 pv.612.diff.3.name=¥¿¥¤¥à¥Þ¥·¥ó
-pv.612.diff.3.notecounts=348,66,2,0,1
-pv.612.diff.3.notepercents=8345,1583,48,0,24
-pv.612.diff.3.percent=9750
-pv.612.diff.3.rank=4
-pv.612.diff.3.score=438250
+pv.612.diff.3.notecounts=380,37,0,0,0
+pv.612.diff.3.notepercents=9113,887,0,0,0
+pv.612.diff.3.percent=10361
+pv.612.diff.3.rank=5
+pv.612.diff.3.score=459130
 pv.612.diff.3.slidescore=39490
-pv.612.diff.3.check=1658240424
+pv.612.diff.3.check=-853998321
 pv.625.diff.3.alltimerank=3
 pv.625.diff.3.challengescore=0
 pv.625.diff.3.combo=305
@@ -701,19 +701,19 @@ pv.442.diff.3.rank=4
 pv.442.diff.3.score=409210
 pv.442.diff.3.slidescore=52400
 pv.442.diff.3.check=-1877148692
-pv.710.diff.3.alltimerank=4
+pv.710.diff.3.alltimerank=5
 pv.710.diff.3.challengescore=0
-pv.710.diff.3.combo=293
-pv.710.diff.3.holdscore=157160
+pv.710.diff.3.combo=429
+pv.710.diff.3.holdscore=156950
 pv.710.diff.3.modifier=0
 pv.710.diff.3.name=—@¥ÎÓê
-pv.710.diff.3.notecounts=368,60,1,0,0
-pv.710.diff.3.notepercents=8578,1399,23,0,0
-pv.710.diff.3.percent=10103
-pv.710.diff.3.rank=4
-pv.710.diff.3.score=563580
+pv.710.diff.3.notecounts=384,45,0,0,0
+pv.710.diff.3.notepercents=8951,1049,0,0,0
+pv.710.diff.3.percent=10370
+pv.710.diff.3.rank=5
+pv.710.diff.3.score=574220
 pv.710.diff.3.slidescore=121560
-pv.710.diff.3.check=1742889380
+pv.710.diff.3.check=854904021
 pv.439.diff.3.alltimerank=3
 pv.439.diff.3.challengescore=0
 pv.439.diff.3.combo=207
@@ -940,8 +940,8 @@ pv.240.diff.3.score=619280
 pv.240.diff.3.slidescore=104850
 pv.240.diff.3.check=1628986371
 pv.615.diff.3.alltimemodifiers=0
-pv.615.diff.3.alltimepercent=9844
-pv.615.diff.3.check=1848268340
+pv.615.diff.3.alltimepercent=10395
+pv.615.diff.3.check=-711780901
 pv.267.diff.3.alltimemodifiers=0
 pv.267.diff.3.alltimepercent=7593
 pv.267.diff.3.alltimerank=2
@@ -1375,20 +1375,20 @@ pv.248.diff.3.rank=2
 pv.248.diff.3.score=518450
 pv.248.diff.3.slidescore=32860
 pv.438.diff.3.alltimemodifiers=0
-pv.438.diff.3.alltimepercent=7210
+pv.438.diff.3.alltimepercent=7820
 pv.438.diff.3.alltimerank=2
 pv.438.diff.3.challengescore=0
-pv.438.diff.3.combo=129
-pv.438.diff.3.holdscore=155830
+pv.438.diff.3.combo=186
+pv.438.diff.3.holdscore=178630
 pv.438.diff.3.modifier=0
 pv.438.diff.3.name=¥¹¥Æ¥Ã¥×¥Õ¥©¥ï©`¥É
-pv.438.diff.3.notecounts=433,150,11,10,52
-pv.438.diff.3.notepercents=6601,2287,168,152,793
-pv.438.diff.3.percent=7210
+pv.438.diff.3.notecounts=493,111,11,6,35
+pv.438.diff.3.notepercents=7515,1692,168,91,534
+pv.438.diff.3.percent=7820
 pv.438.diff.3.rank=2
-pv.438.diff.3.score=472780
-pv.438.diff.3.slidescore=44870
-pv.438.diff.3.check=993422778
+pv.438.diff.3.score=522740
+pv.438.diff.3.slidescore=46120
+pv.438.diff.3.check=-1052904890
 pv.440.diff.3.alltimemodifiers=0
 pv.440.diff.3.alltimepercent=8228
 pv.440.diff.3.alltimerank=2
@@ -2338,20 +2338,20 @@ pv.619.diff.3.score=838160
 pv.619.diff.3.slidescore=365570
 pv.619.diff.3.check=855570911
 pv.603.diff.3.alltimemodifiers=0
-pv.603.diff.3.alltimepercent=9431
-pv.603.diff.3.alltimerank=3
+pv.603.diff.3.alltimepercent=9699
+pv.603.diff.3.alltimerank=4
 pv.603.diff.3.challengescore=0
-pv.603.diff.3.combo=219
-pv.603.diff.3.holdscore=71110
+pv.603.diff.3.combo=322
+pv.603.diff.3.holdscore=70330
 pv.603.diff.3.modifier=0
 pv.603.diff.3.name=DYE
-pv.603.diff.3.notecounts=594,53,2,0,9
-pv.603.diff.3.notepercents=9027,805,30,0,137
-pv.603.diff.3.percent=9431
-pv.603.diff.3.rank=3
-pv.603.diff.3.score=536910
-pv.603.diff.3.slidescore=47000
-pv.603.diff.3.check=1938789609
+pv.603.diff.3.notecounts=588,66,1,1,2
+pv.603.diff.3.notepercents=8936,1003,15,15,30
+pv.603.diff.3.percent=9699
+pv.603.diff.3.rank=4
+pv.603.diff.3.score=550710
+pv.603.diff.3.slidescore=47700
+pv.603.diff.3.check=-1631741720
 pv.420.diff.3.alltimemodifiers=0
 pv.420.diff.3.alltimepercent=7975
 pv.420.diff.3.alltimerank=2
@@ -2368,20 +2368,20 @@ pv.420.diff.3.score=392190
 pv.420.diff.3.slidescore=0
 pv.420.diff.3.check=-1030883808
 pv.096.diff.3.alltimemodifiers=0
-pv.096.diff.3.alltimepercent=10000
+pv.096.diff.3.alltimepercent=10087
 pv.096.diff.3.alltimerank=4
 pv.096.diff.3.challengescore=0
-pv.096.diff.3.combo=284
-pv.096.diff.3.holdscore=161620
+pv.096.diff.3.combo=357
+pv.096.diff.3.holdscore=162550
 pv.096.diff.3.modifier=0
 pv.096.diff.3.name=·eÂÒë…¥°¥é¥Õ¥£¥Æ¥£
-pv.096.diff.3.notecounts=408,52,0,0,3
-pv.096.diff.3.notepercents=8812,1123,0,0,65
-pv.096.diff.3.percent=10000
+pv.096.diff.3.notecounts=415,47,1,0,0
+pv.096.diff.3.notepercents=8963,1015,22,0,0
+pv.096.diff.3.percent=10087
 pv.096.diff.3.rank=4
-pv.096.diff.3.score=481220
+pv.096.diff.3.score=484010
 pv.096.diff.3.slidescore=0
-pv.096.diff.3.check=-1709089856
+pv.096.diff.3.check=-1679716464
 pv.088.diff.3.alltimemodifiers=0
 pv.088.diff.3.alltimepercent=9676
 pv.088.diff.3.alltimerank=4
@@ -2584,20 +2584,20 @@ pv.212.diff.3.score=392340
 pv.212.diff.3.slidescore=0
 pv.212.diff.3.check=-1043334966
 pv.065.diff.3.alltimemodifiers=0
-pv.065.diff.3.alltimepercent=9985
-pv.065.diff.3.alltimerank=4
+pv.065.diff.3.alltimepercent=10165
+pv.065.diff.3.alltimerank=5
 pv.065.diff.3.challengescore=0
-pv.065.diff.3.combo=323
-pv.065.diff.3.holdscore=139900
+pv.065.diff.3.combo=389
+pv.065.diff.3.holdscore=138790
 pv.065.diff.3.modifier=0
 pv.065.diff.3.name=¥Ï¥¸¥á¥Æ¥Î¥ª¥È
-pv.065.diff.3.notecounts=343,44,2,0,0
-pv.065.diff.3.notepercents=8817,1131,51,0,0
-pv.065.diff.3.percent=9985
-pv.065.diff.3.rank=4
-pv.065.diff.3.score=397880
+pv.065.diff.3.notecounts=334,55,0,0,0
+pv.065.diff.3.notepercents=8586,1414,0,0,0
+pv.065.diff.3.percent=10165
+pv.065.diff.3.rank=5
+pv.065.diff.3.score=403000
 pv.065.diff.3.slidescore=0
-pv.065.diff.3.check=-1722266260
+pv.065.diff.3.check=-1024997941
 pv.037.diff.3.alltimemodifiers=0
 pv.037.diff.3.alltimepercent=9200
 pv.037.diff.3.alltimerank=3
@@ -3533,7 +3533,7 @@ pv.411.diff.3.slidescore=0
 pv.263.diff.3.alltimemodifiers=1
 pv.263.diff.3.alltimepercent=8759
 pv.253.diff.3.alltimemodifiers=1
-pv.253.diff.3.alltimepercent=10118
+pv.253.diff.3.alltimepercent=10347
 pv.006.diff.3.alltimemodifiers=7
 pv.006.diff.3.alltimepercent=10228
 pv.018.diff.3.alltimemodifiers=7
@@ -3582,18 +3582,18 @@ pv.039.diff.3.rank=4
 pv.039.diff.3.score=437840
 pv.039.diff.3.slidescore=0
 pv.039.diff.3.check=1643035376
-pv.615.diff.3.alltimerank=4
+pv.615.diff.3.alltimerank=5
 pv.615.diff.3.challengescore=0
-pv.615.diff.3.combo=231
-pv.615.diff.3.holdscore=163470
+pv.615.diff.3.combo=608
+pv.615.diff.3.holdscore=167860
 pv.615.diff.3.modifier=0
 pv.615.diff.3.name=¥á¥é¥ó¥³¥ê¥Ã¥¯
-pv.615.diff.3.notecounts=513,90,0,2,3
-pv.615.diff.3.notepercents=8438,1480,0,33,49
-pv.615.diff.3.percent=9844
-pv.615.diff.3.rank=4
-pv.615.diff.3.score=628020
-pv.615.diff.3.slidescore=102260
+pv.615.diff.3.notecounts=556,52,0,0,0
+pv.615.diff.3.notepercents=9145,855,0,0,0
+pv.615.diff.3.percent=10395
+pv.615.diff.3.rank=5
+pv.615.diff.3.score=656910
+pv.615.diff.3.slidescore=102660
 pv.441.diff.3.ex.alltimemodifie=0
 pv.441.diff.3.ex.alltimepercent=9923
 pv.266.diff.0.alltimemodifiers=0
@@ -3828,3 +3828,27 @@ pv.231.diff.3.ex.slidescore=79630
 pv.231.diff.3.ex.check=978249266
 pv.265.diff.3.alltimemodifiers=0
 pv.265.diff.3.alltimepercent=8794
+pv.710.diff.3.alltimemodifiers=0
+pv.710.diff.3.alltimepercent=10370
+pv.032.diff.3.alltimemodifiers=0
+pv.032.diff.3.alltimepercent=6615
+pv.032.diff.3.check=0
+pv.091.diff.3.ex.alltimemodifie=0
+pv.091.diff.3.ex.alltimepercent=541
+pv.091.diff.3.ex.check=0
+pv.020.diff.3.ex.alltimemodifie=0
+pv.020.diff.3.ex.alltimepercent=9816
+pv.612.diff.3.alltimemodifiers=0
+pv.612.diff.3.alltimepercent=10361
+pv.639.diff.3.ex.alltimemodifie=0
+pv.639.diff.3.ex.alltimepercent=7856
+pv.639.diff.3.ex.check=0
+pv.808.diff.3.alltimemodifiers=0
+pv.808.diff.3.alltimepercent=791
+pv.808.diff.3.check=0
+pv.808.diff.2.alltimemodifiers=0
+pv.808.diff.2.alltimepercent=1271
+pv.808.diff.2.check=0
+pv.700.diff.3.alltimemodifiers=0
+pv.700.diff.3.alltimepercent=712
+pv.700.diff.3.check=0
